--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
@@ -238,7 +238,10 @@
                                 <tbody>
                                     @for (prod of prodSpecs; track prod.id) {
                                         <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                            <td class="px-6 py-4 text-wrap break-all">
+                                            <td [ngClass]="{
+                                                'break-all': hasLongWord(prod.name, 20),
+                                                'break-words': !hasLongWord(prod.name, 20)
+                                                }" class="px-6 py-4 text-wrap break-words">
                                                 {{prod.name}}
                                             </td>
                                             <td class="hidden md:table-cell px-6 py-4">
@@ -377,7 +380,10 @@
                             <tbody>
                                 @for (sel of selectedISOS; track sel.name; let idx = $index) {
                                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                        <td class="px-6 py-4 text-wrap break-all">
+                                        <td [ngClass]="{
+                                            'break-all': hasLongWord(sel.name, 20),
+                                            'break-words': !hasLongWord(sel.name, 20)
+                                            }" class="px-6 py-4 text-wrap break-words">
                                             {{sel.name}}
                                         </td>
                                         <td class="px-6 py-4 text-wrap break-all">
@@ -482,10 +488,16 @@
                                 <tbody>
                                     @for (prod of prodChars; track prod;) {
                                         <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                            <td class="px-6 py-4 max-w-1/6 text-wrap break-all">
+                                            <td [ngClass]="{
+                                                'break-all': hasLongWord(prod.name, 20),
+                                                'break-words': !hasLongWord(prod.name, 20)
+                                                }" class="px-6 py-4 max-w-1/6 text-wrap break-words">
                                                 {{prod.name}}
                                             </td>
-                                            <td class="hidden lg:table-cell px-6 py-4 text-wrap break-all">
+                                            <td [ngClass]="{
+                                                'break-all': hasLongWord(prod.description, 20),
+                                                'break-words': !hasLongWord(prod.description, 20)
+                                                }" class="hidden lg:table-cell px-6 py-4 text-wrap break-words">
                                                 {{prod.description}}                                       
                                             </td>
                                             <td class="px-6 py-4 text-wrap break-all">
@@ -751,7 +763,10 @@
                             <tbody>
                                 @for (res of resourceSpecs; track res.id) {
                                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                        <td class="px-6 py-4 text-wrap break-all">
+                                        <td [ngClass]="{
+                                            'break-all': hasLongWord(res.name, 20),
+                                            'break-words': !hasLongWord(res.name, 20)
+                                            }" class="px-6 py-4 text-wrap break-words">
                                             {{res.name}}
                                         </td>
                                         <td class="hidden md:table-cell px-6 py-4">
@@ -851,7 +866,10 @@
                             <tbody>
                                 @for (serv of serviceSpecs; track serv.id) {
                                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                        <td class="px-6 py-4 text-wrap break-all">
+                                        <td [ngClass]="{
+                                            'break-all': hasLongWord(serv.name, 20),
+                                            'break-words': !hasLongWord(serv.name, 20)
+                                            }" class="px-6 py-4 text-wrap break-words">
                                             {{serv.name}}
                                         </td>
                                         <td class="hidden md:table-cell px-6 py-4">
@@ -1018,7 +1036,10 @@
                                 <tbody>
                                     @for (att of prodAttachments; track att) {
                                         <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                            <td class="px-6 py-4 text-wrap break-all">
+                                            <td [ngClass]="{
+                                                'break-all': hasLongWord(att.name, 20),
+                                                'break-words': !hasLongWord(att.name, 20)
+                                                }" class="px-6 py-4 text-wrap break-words">
                                                 {{att.name}}
                                             </td>
                                             <td class="px-6 py-4 text-wrap break-all">
@@ -1149,7 +1170,10 @@
                                                 <td class="px-6 py-4">
                                                     {{rel.relationshipType}}
                                                 </td>
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(rel.productSpec.name, 20),
+                                                    'break-words': !hasLongWord(rel.productSpec.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{rel.productSpec.name}}
                                                 </td>
                                                 <td class="hidden md:table-cell px-6 py-4">
@@ -1237,7 +1261,10 @@
                                             @for (rel of prodSpecRels; track rel) {
                                                 <tr class="border-b hover:bg-gray-200 dark:border-gray-700 dark:hover:bg-secondary-200" (click)="selectRelationship(rel)" 
                                                     [ngClass]="rel.id == selectedProdSpec.id ? 'bg-gray-300 dark:bg-secondary-200' : 'bg-white dark:bg-secondary-300'">
-                                                    <td class="px-6 py-4 text-wrap break-all">
+                                                    <td [ngClass]="{
+                                                        'break-all': hasLongWord(rel.name, 20),
+                                                        'break-words': !hasLongWord(rel.name, 20)
+                                                        }" class="px-6 py-4 text-wrap break-words">
                                                         {{rel.name}}
                                                     </td>
                                                     <td class="px-6 py-4">
@@ -1311,7 +1338,10 @@
                         <div class="mb-4 md:grid md:grid-cols-2 gap-4">
                             <div>
                                 <label class="font-bold text-lg dark:text-white">{{ 'CREATE_PROD_SPEC._product_name' | translate }}</label>
-                                <label class="mb-2 bg-gray-50 text-wrap break-all border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                                <label [ngClass]="{
+                                    'break-all': hasLongWord(productSpecToCreate?.name, 20),
+                                    'break-words': !hasLongWord(productSpecToCreate?.name, 20)
+                                    }" class="mb-2 bg-gray-50 text-wrap break-words border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                     {{productSpecToCreate?.name}}
                                 </label>
                                 <label for="prod-version" class="font-bold text-lg dark:text-white">{{ 'CREATE_PROD_SPEC._product_version' | translate }}</label>
@@ -1321,7 +1351,10 @@
                             </div>
                             <div>
                                 <label class="font-bold text-lg dark:text-white">{{ 'CREATE_PROD_SPEC._product_brand' | translate }}</label>
-                                <label class="mb-2 bg-gray-50 text-wrap break-all border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" >
+                                <label [ngClass]="{
+                                    'break-all': hasLongWord(productSpecToCreate?.brand, 20),
+                                    'break-words': !hasLongWord(productSpecToCreate?.brand, 20)
+                                    }" class="mb-2 bg-gray-50 text-wrap break-words border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" >
                                     {{productSpecToCreate?.brand}}
                                 </label>
                                 @if(productSpecToCreate?.productNumber!=''){
@@ -1349,7 +1382,10 @@
                         @if(productSpecToCreate?.description !=''){
                             <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_PROD_SPEC._product_description' | translate }}</label>
                             <div class="px-4 py-2 bg-white rounded-lg p-4 dark:bg-secondary-300 border dark:border-secondary-200"> 
-                                <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="productSpecToCreate?.description"></markdown>
+                                <markdown [ngClass]="{
+                                    'break-all': hasLongWord(productSpecToCreate?.description, 20),
+                                    'break-words': !hasLongWord(productSpecToCreate?.description, 20)
+                                    }" class="bg-gray-50 text-wrap break-words dark:bg-secondary-300 dark:text-white text-gray-900" [data]="productSpecToCreate?.description"></markdown>
                             </div>
                         }
 
@@ -1377,7 +1413,10 @@
                                     <tbody>
                                         @for (bun of prodSpecsBundle; track bun) {
                                             <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(bun.name, 20),
+                                                    'break-words': !hasLongWord(bun.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{bun.name}}
                                                 </td>
                                                 <td class="px-6 py-4">
@@ -1418,10 +1457,16 @@
                                     <tbody>
                                         @for (prod of productSpecToCreate?.productSpecCharacteristic; track prod;) {
                                             <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(prod.name, 20),
+                                                    'break-words': !hasLongWord(prod.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{prod.name}}
                                                 </td>
-                                                <td class="hidden lg:table-cell px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(prod.description, 20),
+                                                    'break-words': !hasLongWord(prod.description, 20)
+                                                    }" class="hidden lg:table-cell px-6 py-4 text-wrap break-words">
                                                     {{prod.description}}                                       
                                                 </td>
                                                 <td class="px-6 py-4 text-wrap break-all">
@@ -1470,7 +1515,10 @@
                                     <tbody>
                                         @for (res of selectedResourceSpecs; track res) {
                                             <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(res.name, 20),
+                                                    'break-words': !hasLongWord(res.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{res.name}}
                                                 </td>
                                             </tr>
@@ -1494,7 +1542,10 @@
                                     <tbody>
                                         @for (serv of selectedServiceSpecs; track serv) {
                                             <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(serv.name, 20),
+                                                    'break-words': !hasLongWord(serv.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{serv.name}}
                                                 </td>
                                             </tr>
@@ -1521,7 +1572,10 @@
                                     <tbody>
                                         @for (att of productSpecToCreate?.attachment; track att) {
                                             <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(att.name, 20),
+                                                    'break-words': !hasLongWord(att.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{att.name}}
                                                 </td>
                                                 <td class="px-6 py-4 text-wrap break-all">
@@ -1560,7 +1614,10 @@
                                                 <td class="px-6 py-4">
                                                     {{rel.relationshipType}}
                                                 </td>
-                                                <td class="px-6 py-4 text-wrap break-all">
+                                                <td [ngClass]="{
+                                                    'break-all': hasLongWord(rel.productSpec.name, 20),
+                                                    'break-words': !hasLongWord(rel.productSpec.name, 20)
+                                                    }" class="px-6 py-4 text-wrap break-words">
                                                     {{rel.productSpec.name}}
                                                 </td>
                                                 <td class="hidden md:table-cell px-6 py-4">
