--- a/src/app/pages/seller-offerings/offerings/seller-resource-spec/seller-resource-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-resource-spec/seller-resource-spec.component.html
@@ -136,7 +136,10 @@
                 <tbody>
                     @for (res of resSpecs; track res.id) {
                         <tr data-cy="resSpecRow" class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                            <td class="px-6 py-4 text-wrap break-all">
+                            <td [ngClass]="{
+                                'break-all': hasLongWord(res.name, 20),
+                                'break-words': !hasLongWord(res.name, 20)
+                                }" class="px-6 py-4 text-wrap break-words">
                                 {{res.name}}
                             </td>
                             <td class="px-6 py-4">
