--- a/src/app/pages/contact-us/contact-us-form.component.html
+++ b/src/app/pages/contact-us/contact-us-form.component.html
@@ -141,7 +141,7 @@
                 <div class="w-full mb-4 rounded-t-lg p-8">
                     
                     <fa-icon [icon]="faHandsHoldingHeart" class="text-5xl text-primary-50 align-middle mr-2"></fa-icon>
-                    <h5 class="md:text-3xl lg:text-4xl mt-2 font-semibold tracking-tight text-secondary-100 dark:text-white text-wrap break-all">{{ 'CONTACTUS._thanks' | translate }}</h5>
+                    <h5 class="md:text-3xl lg:text-4xl mt-2 font-semibold tracking-tight text-secondary-100 dark:text-white text-wrap break-words">{{ 'CONTACTUS._thanks' | translate }}</h5>
     
                 </div>
         </div>
