--- a/src/app/pages/seller-offerings/offerings/seller-offer/seller-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/seller-offer.component.html
@@ -154,7 +154,10 @@
                 <tbody data-cy="offers">
                     @for (offer of offers; track offer.id) {
                         <tr data-cy="offerRow" class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                            <td class="px-6 py-4 text-wrap break-all">
+                            <td [ngClass]="{
+                                'break-all': hasLongWord(offer.name, 20),
+                                'break-words': !hasLongWord(offer.name, 20)
+                                }" class="px-6 py-4 text-wrap break-words">
                                 {{offer.name}}
                             </td>
                             <td class="px-6 py-4">
